@@ -38,6 +38,7 @@ Bug fixes
  * Choosing a popular search term for promoted search results now works correctly after pagination (Janneke Janssen)
  * IDs used in tabbed interfaces are now namespaced to avoid collisions with other page elements (Janneke Janssen)
  * Page title not displaying page name when moving a page (Trent Holliday)
+ * The ModelAdmin module can now work without the wagtailimages and wagtaildocs apps installed (Andy Babic)
 
 
 Upgrade considerations
