@@ -24,6 +24,7 @@ Changelog
  * Fix: Choosing a popular search term for promoted search results now works correctly after pagination (Janneke Janssen)
  * Fix: IDs used in tabbed interfaces are now namespaced to avoid collisions with other page elements (Janneke Janssen)
  * Fix: Page title not displaying page name when moving a page (Trent Holliday)
+ * Fix: The ModelAdmin module can now work without the wagtailimages and wagtaildocs apps installed (Andy Babic)
 
 
 1.9 (16.02.2017)
